--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,50 +22,40 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-     - name: Send mail
-  uses: dawidd6/action-send-mail@v3
-  with:
-    # Specify connection via URL (replaces server_address, server_port, secure,
-    # username and password)
-    #
-    # Format:
-    #
-    #  * smtp://user:password@server:port
-    #  * smtp+starttls://user:password@server:port
-    connection_url: ${{secrets.MAIL_CONNECTION}}
-    # Required mail server address if not connection_url:
-    server_address: smtp.gmail.com
-    # Server port, default 25:
-    server_port: 465
-    # Optional whether this connection use TLS (default is true if server_port is 465)
-    secure: true
-    # Optional (recommended) mail server username:
-    username: ${{secrets.MAIL_USERNAME}}
-    # Optional (recommended) mail server password:
-    password: ${{secrets.MAIL_PASSWORD}}
-    # Required mail subject:
-    subject: Github Actions job result
-    # Required recipients' addresses:
-    to: obiwan@example.com,yoda@example.com
-    # Required sender full name (address can be skipped):
-    from: Luke Skywalker # <user@example.com>
-    # Optional plain body:
-    body: Build job of ${{github.repository}} completed successfully!
-    # Optional HTML body read from file:
-    html_body: file://README.html
-    # Optional carbon copy recipients:
-    cc: kyloren@example.com,leia@example.com
-    # Optional blind carbon copy recipients:
-    bcc: r2d2@example.com,hansolo@example.com
-    # Optional recipient of the email response:
-    reply_to: luke@example.com
-    # Optional Message ID this message is replying to:
-    in_reply_to: <random-luke@example.com>
-    # Optional unsigned/invalid certificates allowance:
-    ignore_cert: true
-    # Optional converting Markdown to HTML (set content_type to text/html too):
-    convert_markdown: true
-    # Optional attachments:
-    attachments: attachments.zip,git.diff,./dist/static/*.js
-    # Optional priority: 'high', 'normal' (default) or 'low'
-    priority: low
+      
+      - uses: dawidd6/action-send-mail@v3
+        with:
+
+          server_address: smtp.gmail.com
+
+          # Server port, default 25:
+
+          server_port: 465
+
+          # Optional whether this connection use TLS (default is true if server_port is 465)
+
+          secure: true
+
+          # Required mail subject:
+
+          username: ${{secrets.MAIL_USERNAME}}
+
+          password: ${{secrets.MAIL_PASSWORD}}
+
+          subject: Github Actions job result
+
+          # Required recipients' addresses:
+
+          to: jnyamu1@babson.edu, 
+
+          # Required sender full name (address can be skipped) :
+
+          from: Jacob Nyamu # <user@example.com>
+
+          # Optional plain body:
+
+          body: There's been an update on the Repo, go check it out!
+          
+          
+          
+
